* Tue Feb 07 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 1.0.1-0
- Removed simp_options::ldap::root_hash as this is not a global catalyst

* Wed Feb 01 2017 Nick Markowski <nmarkowski@keywcorp.com> - 1.0.1-0
- Updated ldap *_dn defaults to use simplib::domain_to_dn()

* Mon Jan 30 2017 Nick Miller <nick.miller@onyxpoint.com> - 1.0.1-0
- Added more strict Puppet and PE requirements, pinning to Puppet 4.7+ and
  PE 2016.4.0+
- Updated openssl::cipher_suite to be set to the fips_ciphers fact if it's
  available to expand the 'FIPS' shortcut, which causes issues with some
  applications (openldap)

* Fri Dec 30 2016 Dylan Cochran <dylan.cochran@onyxpoint.com> - 1.0.1-0
- Add simp_options::puppet::server_distribution

* Fri Dec 02 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 1.0.0-0
- Initial version