@@ -1,3 +1,6 @@
+* Wed Apr 12 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 1.0.2-0
+- Add simp_options::package_ensure
+
 * Tue Feb 07 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 1.0.1-0
 - Removed simp_options::ldap::root_hash as this is not a global catalyst
 
